tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/instanceip/instance_IP_with_localhost_sidecar/_test_context/Sidecar.1015292531.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-60257
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: 127.0.0.1:18082
    port:
      number: 18082
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
